maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:7: error: not found: value x
    keepHandOnSideWall(x)
                       ^